[package]
name = "relp-bin"
version = "0.0.5"
authors = ["Bram van den Heuvel <bram@vandenheuvel.online>"]
edition = "2018"
description = "An exact linear program solver written in Rust"
repository = "https://github.com/vandenheuvel/relp-bin"
license = "GPL-3.0-only"

keywords = ["linear", "exact", "precision", "ilp", "simplex"]
categories = ["algorithms", "science"]

[dependencies]
relp = "0.2.3"
relp-num = "0.1.10"
clap = { version = "3.0.5", features = ["derive"] }

[profile.release]
lto = true
