[package]
name = "relp-bin"
version = "0.0.6"
authors = ["Bram van den Heuvel <bram@vandenheuvel.online>"]
edition = "2021"
description = "An exact linear program solver written in Rust"
repository = "https://github.com/vandenheuvel/relp-bin"
license = "GPL-3.0-only"

keywords = ["linear", "exact", "precision", "ilp", "simplex"]
categories = ["algorithms", "science"]

[dependencies]
relp = "0.2.4"
relp-num = "0.1.11"
clap = { version = "3.1.8", features = ["derive"] }

[profile.release]
lto = true
